// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthForm snapshot for login form is not modified 1`] = `
<div>
  <form
    class="space-y-4"
    data-testid="auth-form"
  >
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="email"
      >
        Email
      </label>
      <input
        aria-describedby="email-description"
        class="mt-1 block w-full rounded border-gray-300 shadow-sm focus:border-slate-500 focus:ring-slate-500"
        id="email"
        required=""
        type="email"
        value=""
      />
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="password"
      >
        Password
      </label>
      <input
        class="mt-1 block w-full rounded border-gray-300 shadow-sm focus:border-slate-500 focus:ring-slate-500"
        id="password"
        required=""
        type="password"
        value=""
      />
    </div>
    <button
      class="w-full bg-slate-600 text-white py-2 px-4 rounded hover:bg-slate-700"
      type="submit"
    >
      Log In
    </button>
  </form>
</div>
`;

exports[`AuthForm snapshot for signup form is not modified 1`] = `
<div>
  <form
    class="space-y-4"
    data-testid="auth-form"
  >
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="email"
      >
        Email
      </label>
      <input
        aria-describedby="email-description"
        class="mt-1 block w-full rounded border-gray-300 shadow-sm focus:border-slate-500 focus:ring-slate-500"
        id="email"
        required=""
        type="email"
        value=""
      />
    </div>
    <div>
      <label
        class="block text-sm font-medium text-gray-700"
        for="password"
      >
        Password
      </label>
      <input
        class="mt-1 block w-full rounded border-gray-300 shadow-sm focus:border-slate-500 focus:ring-slate-500"
        id="password"
        required=""
        type="password"
        value=""
      />
      <p
        class="text-xs text-gray-500 mt-1"
        id="password-description"
      >
        Minimum 6 characters
      </p>
    </div>
    <button
      class="w-full bg-slate-600 text-white py-2 px-4 rounded hover:bg-slate-700"
      type="submit"
    >
      Create Account
    </button>
  </form>
</div>
`;
